test/expect_ident.ref
Error: File "expect_ident.cppo", line 4, characters 6-12
Error: The name of a macro is expected in this position
